@@ -46,8 +46,9 @@ $Id$
     implied warranty.
 
   Blur ('entire image' mode), Sharpen, Trace Contour, Silhouette,
-  Snow Flake, Snow Ball, Black & White, Threshold Magic tools
-  and Jigsaw 3x3 and Jigsaw 5x5 starter images.
+  Snow Flake, Snow Ball, Black & White, Threshold,
+  Tint, Noise and Mosaic Magic Tools
+  Jigsaw 3x3 and Jigsaw 5x5 starter images
   by Andrew 'akanewbie' Corcoran <akanewbie@gmail.com>
   Contributed as part of Google Summer of Code, 2008.
 
